added div container div background image div form

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <div class="container">
+    <div class="background-image">
+      <img src="fog.jpeg" alt="dark foggy trail">
+    </div>
+    <div class="form-container">
+      <form action="" method="post">
+        
+      </form>
+    </div>
+  </div>
 </body>
 </html>
