added title to html and maring padding 0 to css

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Sign up form</title>
 </head>
 <body>
   <div class="container">
@@ -12,7 +12,7 @@
     </div>
     <div class="form-container">
       <form action="" method="post">
-        
+
       </form>
     </div>
   </div>
