--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sign up form</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="container">
-    <div class="background-image">
-      <img src="fog.jpeg" alt="dark foggy trail">
+    <div class="image-container">
+      <img class="background-image" src="fog.jpeg" alt="dark foggy trail">
     </div>
     <div class="form-container">
       <form action="" method="post">
