fixed background image

--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <div class="image-container">
-      <img class="background-image" src="fog.jpeg" alt="dark foggy trail">
-    </div>
+    <div class="image-container"></div>
     <div class="form-container">
       <form action="" method="post">
 
