added title and footer

--- a/index.html
+++ b/index.html
@@ -3,15 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sign up form</title>
+  <title>Sign-up form</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="container">
-    <div class="image-container"></div>
+    <div class="image-container">
+      <div class="title-container">
+        <h1 class="title">Sign-up Form Project</h1>
+      </div>
+      <div class="footer">
+        Photo by Lucas Pezeta on <a href="https://www.pexels.com/">pexels</a>
+      </div>
+    </div>
     <div class="form-container">
       <form action="" method="post">
-
+      
       </form>
     </div>
   </div>
