--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1 class="title">Sign-up Form Project</h1>
       </div>
       <div class="footer">
-        Photo by Lucas Pezeta on <a href="https://www.pexels.com/">pexels</a>
+        Photo by Lucas Pezeta on <a href="https://www.pexels.com/" style="color: rgb(77,77,77);">pexels</a>
       </div>
     </div>
     <div class="form-container">
