added background color right side

--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
       </div>
     </div>
     <div class="form-container">
+      <div class="paragraph">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente
+        doloribus natus sint officiis cupiditate architecto odio ducimus
+        tenetur. Expedita itaque modi repellendus quaerat possimus magnam. 
+        Tenetur molestias obcaecati veritatis quae.
+      </div>
       <form action="" method="post">
       
       </form>
