added style to paragraph

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           tenetur. Expedita itaque modi repellendus quaerat possimus magnam.
           Tenetur molestias obcaecati veritatis quae.
         </div>
-        <div>Lorem ipsum dolor sit amet.</div>
+        <div class="sentence">Lorem ipsum dolor sit amet.</div>
       </div>
       <div class="form-container">
         <form action="" method="post">
