--- a/index.html
+++ b/index.html
@@ -28,23 +28,35 @@
       </div>
       <div class="form-container">
         <form action="" method="post">
-          <div class="name-container">
-            <label for="first-name">FIRST NAME</label>
-            <input type="text" id="first-name" name="first-name" required>
-            <label for="last-name">LAST NAME</label>
-            <input type="text" id="last-name" name="last-name" required>
+          <div class="firs row">
+            <div class="label-input-container">
+              <label for="first-name">FIRST NAME</label>
+              <input type="text" id="first-name" name="first-name" required>
+            </div>
+            <div class="label-input-container">
+              <label for="last-name">LAST NAME</label>
+              <input type="text" id="last-name" name="last-name" required>
+            </div>
           </div>
-          <div class="contact-container">
-            <label for="email">E MAIL</label>
-            <input type="email" id="email" name="email" required>
-            <label for="phone">PHONE NUMBER</label>
-            <input type="tel" id="phone" name="phone" required>
+          <div class="second row">
+            <div class="label-input-container">
+              <label for="email">E MAIL</label>
+              <input type="email" id="email" name="email" required>
+            </div>
+            <div class="label-input-container">
+              <label for="phone">PHONE NUMBER</label>
+              <input type="tel" id="phone" name="phone" required>
+            </div>
           </div>
-          <div class="password-container">
-            <label for="password">PASSWORD</label>
-            <input type="password" id="password" name="password" required>
-            <label for="confirm-password">CONFIRM PASSWORD</label>
-            <input type="password" id="password" name="password" required>
+          <div class="third row">
+            <div class="label-input-container">
+              <label for="password">PASSWORD</label>
+              <input type="password" id="password" name="password" required>
+            </div>
+            <div class="label-input-container">
+              <label for="confirm-password">CONFIRM PASSWORD</label>
+              <input type="password" id="password" name="password" required>
+            </div>
           </div>
           <div class="sumbit-container">
             <button type="submit">Create Account</button>
