--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               <input type="password" id="password" name="password" required>
             </div>
           </div>
-          <div class="sumbit-container">
+          <div class="submit-container">
             <button type="submit">Create Account</button>
             <div class="login">Already have an account? <a href="">log in</a></div>
           </div>
