added margin right side

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
         <h1 class="title">Sign-up Form Project</h1>
       </div>
       <div class="footer">
-        Photo by Lucas Pezeta on <a href="https://www.pexels.com/" style="color: rgb(77,77,77);">pexels</a>
+        Photo by Lucas Pezeta on 
+        <a href="https://www.pexels.com/" style="color: rgb(77,77,77);">
+          pexels
+        </a>
       </div>
     </div>
     <div class="right-container">
@@ -28,39 +31,47 @@
       </div>
       <div class="form-container">
         <form action="" method="post">
-          <div class="firs row">
-            <div class="label-input-container">
-              <label for="first-name">FIRST NAME</label>
-              <input type="text" id="first-name" name="first-name" required>
-            </div>
-            <div class="label-input-container">
-              <label for="last-name">LAST NAME</label>
-              <input type="text" id="last-name" name="last-name" required>
-            </div>
+          <div class="header-container">
+            <h4>Lorem, ipsum dolor!</h4>
           </div>
-          <div class="second row">
-            <div class="label-input-container">
-              <label for="email">E MAIL</label>
-              <input type="email" id="email" name="email" required>
+          <div class="row-container">
+            <div class="firs row">
+              <div class="label-input-container">
+                <label for="first-name">FIRST NAME</label>
+                <input type="text" id="first-name" name="first-name" required>
+              </div>
+              <div class="label-input-container">
+                <label for="last-name">LAST NAME</label>
+                <input type="text" id="last-name" name="last-name" required>
+              </div>
             </div>
-            <div class="label-input-container">
-              <label for="phone">PHONE NUMBER</label>
-              <input type="tel" id="phone" name="phone" required>
+            <div class="second row">
+              <div class="label-input-container">
+                <label for="email">E MAIL</label>
+                <input type="email" id="email" name="email" required>
+              </div>
+              <div class="label-input-container">
+                <label for="phone">PHONE NUMBER</label>
+                <input type="tel" id="phone" name="phone" required>
+              </div>
             </div>
-          </div>
-          <div class="third row">
-            <div class="label-input-container">
-              <label for="password">PASSWORD</label>
-              <input type="password" id="password" name="password" required>
-            </div>
-            <div class="label-input-container">
-              <label for="confirm-password">CONFIRM PASSWORD</label>
-              <input type="password" id="password" name="password" required>
+            <div class="third row">
+              <div class="label-input-container">
+                <label for="password">PASSWORD</label>
+                <input type="password" id="password" name="password" required>
+              </div>
+              <div class="label-input-container">
+                <label for="confirm-password">CONFIRM PASSWORD</label>
+                <input type="password" id="password" name="password" required>
+              </div>
             </div>
           </div>
           <div class="submit-container">
             <button type="submit">Create Account</button>
-            <div class="login">Already have an account? <a href="">log in</a></div>
+            <div class="login">
+              Already have an account? 
+              <a href="" style="color: rgb(77,77,77);">log in</a>
+            </div>
           </div>
         </form>
       </div>
