--- a/index.html
+++ b/index.html
@@ -38,31 +38,31 @@
             <div class="firs row">
               <div class="label-input-container">
                 <label for="first-name">FIRST NAME</label>
-                <input type="text" id="first-name" name="first-name" required>
+                <input type="text" id="first-name" name="first-name" maxlength="30" required>
               </div>
               <div class="label-input-container">
                 <label for="last-name">LAST NAME</label>
-                <input type="text" id="last-name" name="last-name" required>
+                <input type="text" id="last-name" name="last-name" maxlength="30" required>
               </div>
             </div>
             <div class="second row">
               <div class="label-input-container">
                 <label for="email">E MAIL</label>
-                <input type="email" id="email" name="email" required>
+                <input type="email" id="email" name="email" maxlength="30" required>
               </div>
               <div class="label-input-container">
                 <label for="phone">PHONE NUMBER</label>
-                <input type="tel" id="phone" name="phone" required>
+                <input type="tel" id="phone" name="phone" maxlength="15" required>
               </div>
             </div>
             <div class="third row">
               <div class="label-input-container">
                 <label for="password">PASSWORD</label>
-                <input type="password" id="password" name="password" required>
+                <input type="password" id="password" name="password" maxlength="20" required>
               </div>
               <div class="label-input-container">
                 <label for="confirm-password">CONFIRM PASSWORD</label>
-                <input type="password" id="password" name="password" required>
+                <input type="password" id="password" name="password" maxlength="20" required>
               </div>
             </div>
           </div>
